--- a/accueil_projet_de_langue.html
+++ b/accueil_projet_de_langue.html
@@ -140,25 +140,25 @@ git push
             </li>
             <li class="inde"><a href="fr/inde.html">   En Inde</a>
                 <ul class="niveau1">
-                    <li><a href="fr/inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
-                    <li><a href="fr/inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
+                    <li><a href="fr/inde.html#compagnies">Les compagnies coloniales européennes</a></li>
+                    <li><a href="fr/inde.html#deroule">Déroulé de la guerre en Inde</a></li>
                 </ul>
             </li>
             <li  class="ailleurs"><a href="fr/ailleurs.html">  Le conflit ailleurs dans le monde</a>
                 <ul class="niveau1">
-                    <li><a href="fr/ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
+                    <li><a href="fr/ailleurs.html#empire_espagnol">Dans l'empire colonial espagnol</a></li>
                         <!--<ul class = "niveau2">
                             <li><a href="fr/ailleurs.html/#philippines">aux Philippines</a></li>
                             <li><a href="fr/ailleurs.html/#amerique_sud_antilles">en Amérique du Sud et aux Antilles</a></li>
                         </ul>-->
-                    <li><a href="fr/ailleurs.html/#senegal">au Sénégal</a></li>
+                    <li><a href="fr/ailleurs.html#senegal">au Sénégal</a></li>
                 </ul>
             </li>
             <li  class="issue"><a href = "fr/issue.html">   Issue</a>   
                 <ul class="niveau1">
-                    <li><a href = "fr/issue.html/#paris">Traité de Paris</a></li>
-                    <li><a href = "fr/issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
-                    <li><a href = "fr/issue.html/#hambourg">Traité de Hambourg</a></li>
+                    <li><a href = "fr/issue.html#paris">Traité de Paris</a></li>
+                    <li><a href = "fr/issue.html#hubertsbourg">Traité de Hubertsbourg</a></li>
+                    <li><a href = "fr/issue.html#hambourg">Traité de Hambourg</a></li>
                 </ul>
             </li> 
             <li class="impacts"><a href ="fr/impacts.html">   Impacts de la Guerre de Sept Ans</a>
