--- a/fr/inde.html
+++ b/fr/inde.html
@@ -47,8 +47,8 @@ git push
             <nav class="menu_deroulant_lateral"> <!--Rajouter les liens des pages-->
                 <li class="presentation"><a href="../accueil_projet_de_langue.html">   Présentation</a>
                     <ul class="niveau1">
-                        <li><a href="../accueil_projet_de_langue.html/#introduction">Introduction</a></li>
-                        <li><a href="../accueil_projet_de_langue.html/#carte">Mappemonde</a></li>
+                        <li><a href="../accueil_projet_de_langue.html#introduction">Introduction</a></li>
+                        <li><a href="../accueil_projet_de_langue.html#carte">Mappemonde</a></li>
                     </ul>
                 </li>
                 <li  class="europe"><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
@@ -128,25 +128,25 @@ git push
                 </li>
                 <li class="inde"><a href="inde.html">   En Inde</a>
                     <ul class="niveau1">
-                        <li><a href="inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
-                        <li><a href="inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
+                        <li><a href="inde.html#compagnies">Les compagnies coloniales européennes</a></li>
+                        <li><a href="inde.html#deroule">Déroulé de la guerre en Inde</a></li>
                     </ul>
                 </li>
                 <li  class="ailleurs"><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
                     <ul class="niveau1">
-                        <li><a href="ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
+                        <li><a href="ailleurs.html#empire_espagnol">Dans l'empire colonial espagnol</a></li>
                             <!--<ul class = "niveau2">
                                 <li><a href="fr/ailleurs.html/#philippines">aux Philippines</a></li>
                                 <li><a href="fr/ailleurs.html/#amerique_sud_antilles">en Amérique du Sud et aux Antilles</a></li>
                             </ul>-->
-                        <li><a href="ailleurs.html/#senegal">au Sénégal</a></li>
+                        <li><a href="ailleurs.html#senegal">au Sénégal</a></li>
                     </ul>
                 </li>
                 <li  class="issue"><a href = "issue.html">   Issue</a>   
                     <ul class="niveau1">
-                        <li><a href = "issue.html/#paris">Traité de Paris</a></li>
-                        <li><a href = "issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
-                        <li><a href = "issue.html/#hambourg">Traité de Hambourg</a></li>
+                        <li><a href = "issue.html#paris">Traité de Paris</a></li>
+                        <li><a href = "issue.html#hubertsbourg">Traité de Hubertsbourg</a></li>
+                        <li><a href = "issue.html#hambourg">Traité de Hambourg</a></li>
                     </ul>
                 </li> 
                 <li class="impacts"><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
@@ -177,7 +177,7 @@ git push
                         simple page pour le rendre compte de façon exhaustif. Pour décrire rapidement, à cette époque dans le nord du 
                         quasi-continent, une dynastie musulmane venue d’Afghanistan administre l’empire Moghol. Cette entité est en 
                         pleine déliquescence depuis la mort de l’empereur Aurangzeb en 1704. La taille et la puissance de l’empire Moghol 
-                        tout du long du XVI° siècle n’avait pas d’équivalents dans le monde. Mais la domination musulmane dans un région 
+                        tout du long du XVI° siècle n’avait pas d’équivalents dans le monde. Mais la domination musulmane dans une région 
                         à majorité sikh et hindoue provoque des révoltes qui rendent la situation au sein de l’empire très instable. 
                         Ainsi, des conflits entre les soubabs et leurs propres administrateurs, les nababs, éclatent et mettent à mal 
                         l’appareil d’Etat tout le long du début du XVIII° siècle. 
@@ -256,7 +256,7 @@ git push
 
                 <hr/>
 
-                <h3 id="introduction">les Compagnies Maritimes Européennes</h3>
+                <h3 id="compagnies">les Compagnies Maritimes Européennes</h3>
 
                 <div class="introduction">
 
@@ -281,7 +281,7 @@ git push
 
                 <hr/>
 
-                <h3 id="introduction">le déroulement de la guerre</h3>
+                <h3 id="deroule">le déroulement de la guerre</h3>
 
                 <div class="introduction">
 
