--- a/fr/europe.html
+++ b/fr/europe.html
@@ -40,12 +40,11 @@
         <div class="flanc_droit">
         
             <img src="../image/menu.png"  class="image_menu"/> 
-
             <nav class="menu_deroulant_lateral"> <!--Rajouter les liens des pages-->
                 <li class="presentation"><a href="../accueil_projet_de_langue.html">   Présentation</a>
                     <ul class="niveau1">
-                        <li><a href="../accueil_projet_de_langue.html/#introduction">Introduction</a></li>
-                        <li><a href="../accueil_projet_de_langue.html/#carte">Mappemonde</a></li>
+                        <li><a href="../accueil_projet_de_langue.html#introduction">Introduction</a></li>
+                        <li><a href="../accueil_projet_de_langue.html#carte">Mappemonde</a></li>
                     </ul>
                 </li>
                 <li  class="europe"><a href="europe.html">   En Europe</a> <!--Une carte avec des liens vers le paragraphe précis-->
@@ -125,25 +124,25 @@
                 </li>
                 <li class="inde"><a href="inde.html">   En Inde</a>
                     <ul class="niveau1">
-                        <li><a href="inde.html/#compagnies">Les compagnies coloniales européennes</a></li>
-                        <li><a href="inde.html/#deroule">Déroulé de la guerre en Inde</a></li>
+                        <li><a href="inde.html#compagnies">Les compagnies coloniales européennes</a></li>
+                        <li><a href="inde.html#deroule">Déroulé de la guerre en Inde</a></li>
                     </ul>
                 </li>
                 <li  class="ailleurs"><a href="ailleurs.html">  Le conflit ailleurs dans le monde</a>
                     <ul class="niveau1">
-                        <li><a href="ailleurs.html/#empire_espagnol">Dans l'empire colonial espagnol</a></li>
+                        <li><a href="ailleurs.html#empire_espagnol">Dans l'empire colonial espagnol</a></li>
                             <!--<ul class = "niveau2">
                                 <li><a href="fr/ailleurs.html/#philippines">aux Philippines</a></li>
                                 <li><a href="fr/ailleurs.html/#amerique_sud_antilles">en Amérique du Sud et aux Antilles</a></li>
                             </ul>-->
-                        <li><a href="ailleurs.html/#senegal">au Sénégal</a></li>
+                        <li><a href="ailleurs.html#senegal">au Sénégal</a></li>
                     </ul>
                 </li>
                 <li  class="issue"><a href = "issue.html">   Issue</a>   
                     <ul class="niveau1">
-                        <li><a href = "issue.html/#paris">Traité de Paris</a></li>
-                        <li><a href = "issue.html/#hubertsbourg">Traité de Hubertsbourg</a></li>
-                        <li><a href = "issue.html/#hambourg">Traité de Hambourg</a></li>
+                        <li><a href = "issue.html#paris">Traité de Paris</a></li>
+                        <li><a href = "issue.html#hubertsbourg">Traité de Hubertsbourg</a></li>
+                        <li><a href = "issue.html#hambourg">Traité de Hambourg</a></li>
                     </ul>
                 </li> 
                 <li class="impacts"><a href ="impacts.html">   Impacts de la Guerre de Sept Ans</a>
